Migrate to 2025.12.x
Refactor user mailer and metrics helper tests to use updated email method and JUnit 5 assertions